--- a/practice-1/index.html
+++ b/practice-1/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./reset.css" />
     <link rel="stylesheet" href="./styles.css" />
-    <title>Practice Test 1</title>
+    <title>Practical Test 1</title>
   </head>
   <body>
     <button class="show" id="show">Become a project partner</button>
